fixed alignment issue with image

--- a/module10/style.css
+++ b/module10/style.css
@@ -11,8 +11,7 @@ body {
 header {
     position: relative;
     font-size: 1em;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0 1rem 0 1rem;
 }
 
 header h1 {
@@ -31,13 +30,14 @@ img {
     width: 100%;
     align-content: center;
     height: auto;
-    margin: 0;
+    vertical-align: bottom;
 }
 
 nav {
-    padding: 0 1rem 5px 1rem;
-    position: relative;
+    padding: 0 1rem 0 1rem;
+    margin-bottom: 3rem;
 }
+
 
 main {
     grid-area: main;
@@ -90,7 +90,7 @@ footer {
 
 .wrapper {
     background-color: white;
-    width: 95%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     min-width: 900px;
@@ -99,7 +99,7 @@ footer {
 }
 
 .grid-padding {
-    padding: 3rem 1rem 0 1rem;
+    padding: 0 1rem 0 1rem;
 
 }
 .grid-layout {
